--- a/index.html
+++ b/index.html
@@ -805,27 +805,25 @@
             in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
-        <div class="row">
-
-          <div class="col-lg-6">
-
-            <div class="row">
-              <div class="col-md-12">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-12">
+            <div class="row justify-content-center align-items-center">
+              <div class="col-md-4">
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
                   <p>JL. Waru 2 Kp.Waru RT 04/04 Desa Sukaharja</p>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4">
+              <div class="col-md-4">
+                <div class="info-box">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
                   <p>bintangsriwijayaservice@gmail.com</p>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4">
+              <div class="col-md-4">
+                <div class="info-box">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
                   <p>(+62) 85777218271<br>(+62) 85717524173<br>(+62) 82115105406</p>
@@ -836,8 +834,8 @@
           </div>
 
           <!-- action="https://formsubmit.co/@gmail.com" method="POST" -->
-          <div class="col-lg-6">
-            <form action="https://formsubmit.co/bintangsriwijayaservice@gmail.com" method="POST">
+          <div class="col-12 mx-auto text-center">
+            <!-- <form action="https://formsubmit.co/bintangsriwijayaservice@gmail.com" method="POST">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -860,7 +858,57 @@
               <div class="text-center">
                 <button type="submit" class="send-message btn">Send Message</button>
               </div>
-            </form>
+            </form> -->
+            <button class="send-message btn text-center mx-auto" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Chat With Us</button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header d-flex justify-content-center">
+                    <img src="assets/img/logoBSStransparant.png" alt="" width="40px">
+                    <h5 class="ms-4 fw-bold mt-1">
+                      <span class="B">B</span>
+                      <span class="S">S</span>
+                      <span class="S2">S</span>
+                      Group
+                    </h5>
+                    <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form action="https://formsubmit.co/bintangsriwijayaservice@gmail.com" method="POST">
+                      <div class="row">
+                        <div class="col-md-6 form-group">
+                          <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="col-md-6 form-group mt-3 mt-md-0">
+                          <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                        </div>
+                      </div>
+                      <div class="form-group mt-3">
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                      </div>
+                      <div class="form-group mt-3">
+                        <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                      </div>
+                      <div class="my-3">
+                        <div class="loading">Loading</div>
+                        <div class="error-message"></div>
+                        <div class="sent-message">Your message has been sent. Thank you!</div>
+                      </div>
+                      <div class="text-center">
+                        <button type="submit" class="send-message btn">Send Message</button>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-form">Save changes</button> -->
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
